force-app/main/default/objects/Channel_Partner__c/fields/Approved_Date__c.field-meta.xml
<CustomField>
    <fullName>Approved_Date__c</fullName>
    <label>Approved/Rejected Date</label>
    <type>DateTime</type>
</CustomField>