force-app/main/default/objects/Channel_Partner__c/fields/CP_Id__c.field-meta.xml
<CustomField>
    <fullName>CP_Id__c</fullName>
    <displayFormat>CP-{0000}</displayFormat>
    <label>CP Id</label>
    <type>AutoNumber</type>
</CustomField>