force-app/main/default/objects/Channel_Partner__c/fields/GST_Registration__c.field-meta.xml
<CustomField>
    <fullName>GST_Registration__c</fullName>
    <label>GST Registration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>