force-app/main/default/objects/Channel_Partner__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Name</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>