force-app/main/default/objects/Channel_Partner__c/fields/Owner_Details__c.field-meta.xml
<CustomField>
    <fullName>Owner_Details__c</fullName>
    <label>Owner Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>