force-app/main/default/objects/Channel_Partner__c/fields/Source_Manager__c.field-meta.xml
<CustomField>
    <fullName>Source_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Source Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Channel_Partners1</relationshipName>
    <type>Lookup</type>
</CustomField>