force-app/main/default/objects/Channel_Partner__c/fields/User_ID__c.field-meta.xml
<CustomField>
    <fullName>User_ID__c</fullName>
    <formula>OwnerId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User ID</label>
    <type>Text</type>
</CustomField>