force-app/main/default/objects/Channel_Partner__c/fields/Work_Address__c.field-meta.xml
<CustomField>
    <fullName>Work_Address__c</fullName>
    <label>Work Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>