force-app/main/default/objects/Channel_Partner__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Name__c</columns>
    <columns>Source_Manager__c</columns>
    <columns>Active__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Phone__c</columns>
    <columns>Type__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>