force-app/main/default/objects/Channel_Partner__c/listViews/Not_Active.listView-meta.xml
<ListView>
    <fullName>Not_Active</fullName>
    <columns>NAME</columns>
    <columns>CP_Id__c</columns>
    <columns>Name__c</columns>
    <columns>Active__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>OWNER.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Approval_Status__c</field>
        <operation>equals</operation>
        <value>Approved</value>
    </filters>
    <label>Not Active</label>
</ListView>