force-app/main/default/objects/Channel_Partner__c/listViews/Not_Approved.listView-meta.xml
<ListView>
    <fullName>Not_Approved</fullName>
    <columns>NAME</columns>
    <columns>Name__c</columns>
    <columns>Active__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>Type__c</columns>
    <columns>Team_Size__c</columns>
    <columns>Source_Manager__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Approval_Status__c</field>
        <operation>equals</operation>
        <value>Pending</value>
    </filters>
    <label>Not Approved</label>
</ListView>